<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>GPEmpower</groupId>
	<artifactId>optum</artifactId>
	<version>1.0-SNAPSHOT</version>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>

					<!--<includes> -->
					<!--<include>src/test/java/co.optum.uk/utility/TestEngine.java</include> -->
					<!--</includes> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>

				<configuration>
					<systemPropertyVariables>
						<RemotelyYorN>Y</RemotelyYorN>
						<Browser>FireFox</Browser>
						<Version>69</Version>
						<OS>Windows 10</OS>
					</systemPropertyVariables>

					<forkCount>2</forkCount>
					<reuseForks>false</reuseForks>

					<threadCount>10</threadCount> <parallel>classes</parallel>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<useSystemClassLoader>false</useSystemClassLoader>
					<testFailureIgnore>false</testFailureIgnore>
					<includes>
						<include>**/Parallel*IT.class</include>
					</includes>
					<!--<forkMode>once</forkMode>-->
					<!--<threadCount>4</threadCount>-->
				</configuration>
			</plugin>


			<plugin>
				<groupId>com.github.temyers</groupId>
				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
				<version>4.2.0</version>
				<executions>
					<execution>
						<id>generateRunners</id>
						<phase>validate</phase>
						<goals>
							<goal>generateRunners</goal>
						</goals>
						<configuration>
							<!-- Mandatory -->
							<!-- List of package names to scan for glue code. -->
							<glue>
							<package>co.uk.optum</package>

								<!--
								<package>co.uk.optum.utility</package>-->
							</glue>
							<featuresDirectory>src/test/resources/features/</featuresDirectory>
							<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
							<parallelScheme>FEATURE</parallelScheme>
							<customVmTemplate>src/test/resources/runnerTemplate1.vm</customVmTemplate>

							<strict>true</strict>
							<!-- CucumberOptions.monochrome property -->
							<monochrome>true</monochrome>

							<tags>
								<tag>@RunTest</tag>
							</tags>


						</configuration>
					</execution>
				</executions>
			</plugin>


		</plugins>


	</build>
	<repositories>
		<repository>
			<id>jcenter</id>
			<name>bintray</name>
			<url>http://jcenter.bintray.com</url>
		</repository>
	</repositories>


	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<!-- <dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
			<scope>compile</scope>
		</dependency>


 -->
		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-cucumber -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-cucumber</artifactId>
			<version>1.9.45</version>
		</dependency>




		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.vidstige/jadb -->

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.4.1</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.14.0</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.6</version>
			<type>pom</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>4.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-firefox-driver</artifactId>
			<version>3.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-scratchpad</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>3.8</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
		<dependency>
			<groupId>com.vimalselvam</groupId>
			<artifactId>cucumber-extentsreport</artifactId>
			<version>3.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.sikulix</groupId>
			<artifactId>sikulixapi</artifactId>
			<version>1.1.2</version>
			<exclusions>
				<exclusion>
					<groupId>com.sikulix</groupId>
					<artifactId>sikulix2tigervnc</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.github.vidstige</groupId>
					<artifactId>jadb</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>


	<!-- <tag>${tagsToIgnore}</tag> -->


</project>